# autonomous_delivry

./: .gitignore  frames.pdf.gv  frames_2025-04-09_12.03.19.gv  frames_2025-04-09_12.05.29.gv  frames_2025-05-19_15.29.04.gv  frames_2025-05-19_16.16.46.gv  frames_2025-05-19_16.30.47.gv  frames_2025-05-19_16.43.42.gv  khadi@192.168.1.19  lidar_issue.txt  wget-log
rviz_config/: lidar_rviz_launch.py  qos_override.yaml
src/my_robot_description/: my_controller.py  package.xml  setup.py
src/my_robot_description/launch/: display.launch.py  gazebo.launch.py  slam_mapping.launch.py
src/my_robot_description/odometry/: odom.py
src/my_robot_description/rviz/: robot_config.rviz  robot_mappin.rviz  robot_mapping.rviz
src/my_robot_description/urdf/: simple_robot.urdf
src/odom_publisher/: package.xml  setup.py
src/odom_publisher/odom_publisher/: lidar_stop_node.py  odom_node.py
